--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="main-nav container">
       <nav>
-        <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo logo-black">Studio</span></a>
+        <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo-black">Studio</span></a>
         <ul class="site-nav">
           <li><a href="index.html" class="link active-page">Студія</a></li>
           <li><a href="portfolio.html" class="page-header link">Портфоліо</a></li> 
@@ -71,15 +71,15 @@
       <section class="section">
         <div class="container">
         <h2 class="title">Чим ми займаємось</h2>
-        <ul>
-          <li class="our-work-images">
-            <img src=".\images\img1.png" alt="Бек-енд розробка" width="270" />
+        <ul class="our-work-images">
+          <li>
+            <img src=".\images\img1.png" alt="Бек-енд розробка" width="370" />
           </li>
-          <li class="our-work-images">
-            <img src=".\images\img2.png" alt="Фронт-енд розробка" width="270" />
+          <li>
+            <img src=".\images\img2.png" alt="Фронт-енд розробка" width="370" />
           </li>
-          <li class="our-work-images">
-            <img src=".\images\img3.png" alt="Розробка стилю" width="270" />
+          <li>
+            <img src=".\images\img3.png" alt="Розробка стилю" width="370" />
           </li>
         </ul>
       </div>
