--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- основна інфа -->
-    <header class="header">
+    <header class="header header-portfolio">
       <div class="main-nav container">
       <nav>
         <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo logo-black">Studio</span></a>
