--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="" class="page-header link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contacts-nav container">
+      <ul class="contacts-nav">
         <li>
           <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
         </li>
@@ -147,7 +147,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-nav">
-      <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo logo-white">Studio</span></a>
+      <a href="./index.html" class="logo-footer logo-blue logo-link">Web<span class="logo-footer logo-white">Studio</span></a>
     </div>
       <address class="container">
         <ul>
