--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,14 @@
     <header class="header header-portfolio">
       <div class="main-nav container">
       <nav>
-        <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo logo-black">Studio</span></a>
+        <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo-black">Studio</span></a>
         <ul class="site-nav">
           <li><a href="index.html" class="page-header link">Студія</a></li>
           <li><a href="portfolio.html" class="link active-page">Портфоліо</a></li> 
           <li><a href="" class="page-header link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contacts-nav container">
+      <ul class="contacts-nav">
         <li>
           <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
         </li>
@@ -40,7 +40,7 @@
         <h1 class="visually-hidden">Title</h1>
         <ul class="buttons-portfolio">
           <li>
-            <button type="button" class="button pointer">Все</button>
+            <button type="button" class="button pointer button-selected">Все</button>
           </li>
           <li>
             <button type="button" class="button pointer">Веб-сайти</button>
@@ -162,7 +162,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-nav">
-      <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo logo-white">Studio</span></a>
+      <a href="./index.html" class="logo-footer logo-blue logo-link">Web<span class="logo-footer logo-white">Studio</span></a>
       </div>
       <address class="container">
         <ul>
