--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- основна інфа -->
     <header class="header">
 
-      <div class="main-nav container">
+      <div class="container">
       <nav>
         <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo-black">Studio</span></a>
         <ul class="site-nav">
@@ -26,10 +26,10 @@
       </nav>
       <ul class="contacts-nav">
         <li>
-          <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
+          <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
         </li>
       </ul>
       </div>
@@ -48,19 +48,19 @@
         <div class="container">
         <h2 class="title visually-hidden" aria-hidden="true" tabindex="-1">Features</h2>
         <ul class="features-text">
-          <li>
+          <li class="features-text-margin">
            <h3 class="pre-title">Увага до деталей</h3>
            <p class="pre-title-text">Ідейні міркування, а також початок буденної роботи з формування позиції</p>
           </li>
-          <li>
+          <li class="features-text-margin">
             <h3 class="pre-title">Пунктуальність</h3>
             <p class="pre-title-text">Задача організації, особливо рамки та місце навчання кадрів веде за собою</p>
           </li>
-          <li>
+          <li class="features-text-margin">
             <h3 class="pre-title">Планування</h3>
             <p class="pre-title-text">По суті консультація з широким активом значною мірою обумовлює</p>
           </li>
-          <li>
+          <li class="features-text-margin">
             <h3 class="pre-title">Сучасні технології</h3>
             <p class="pre-title-text">Значність цих проблем настільки очевидна, що реалізація планових завдань</p>
           </li>
@@ -68,7 +68,7 @@
         </div>
       </section>
       <!-- Третя секція -->
-      <section class="section">
+      <section class="section-three">
         <div class="container">
         <h2 class="title">Чим ми займаємось</h2>
         <ul class="our-work-images">
@@ -146,10 +146,10 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-nav">
-      <a href="./index.html" class="logo-footer logo-blue logo-link">Web<span class="logo-footer logo-white">Studio</span></a>
-    </div>
-      <address class="container">
+      <div class="container">
+      <a href="./index.html" class="logo-footer logo-blue logo-link">Web<span class="logo-white">Studio</span>
+      </a>
+      <address>
         <ul>
          <li class="footer-items">
             <a href="https://goo.gl/maps/1e6sSvzwmUZJnKFR7" class="footer-address link">м.Київ бульвар Лесі Українки, 26</a>
@@ -162,6 +162,7 @@
          </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
