--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <body>
     <!-- основна інфа -->
     <header class="header header-portfolio">
-      <div class="main-nav container">
+      <div class="container">
       <nav>
         <a href="./index.html" class="logo logo-blue logo-link">Web<span class="logo-black">Studio</span></a>
         <ul class="site-nav">
@@ -25,17 +25,17 @@
       </nav>
       <ul class="contacts-nav">
         <li>
-          <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
+          <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
         </li>
       </ul>
       </div>
     </header>
 
     <main class="main">
-      <section>
+      <section class="section">
         <div class="container">
         <h1 class="visually-hidden">Title</h1>
         <ul class="buttons-portfolio">
@@ -161,10 +161,10 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-nav">
-      <a href="./index.html" class="logo-footer logo-blue logo-link">Web<span class="logo-footer logo-white">Studio</span></a>
-      </div>
-      <address class="container">
+      <div class="container">
+      <a href="./index.html" class="logo-footer logo-blue logo-link">Web<span class="logo-white">Studio</span></a>
+      
+      <address >
         <ul>
          <li class="footer-items">
             <a href="https://goo.gl/maps/1e6sSvzwmUZJnKFR7" class="footer-address link">м.Київ бульвар Лесі Українки, 26</a>
@@ -177,6 +177,7 @@
          </li>
         </ul>
       </address>
+    </div>
     </footer>
   </body>
 </html>
